--- a/wiki/fr/TechDraw_ExtensionDecreaseDecimal.html
+++ b/wiki/fr/TechDraw_ExtensionDecreaseDecimal.html
@@ -67,14 +67,12 @@
 <ul><li>Le nombre minimal de d&eacute;cimales est de 0.</li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">Plus de d&eacute;cimales</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Gomme</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Annotation.html" title="TechDraw Annotation/fr">Annotation</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -114,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121415
+Cached time: 20260125121459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.102 seconds
-Preprocessor visited node count: 345/1000000
-Post&#8208;expand include size: 24833/2097152 bytes
-Template argument size: 9959/2097152 bytes
+CPU time usage: 0.065 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 344/1000000
+Post&#8208;expand include size: 24824/2097152 bytes
+Template argument size: 9953/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,17 +128,17 @@ Unstrip post&#8208;expand size: 1168/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.476      1 -total
- 35.97%    8.084      1 Template:TechDraw_Tools_navi/fr
- 25.31%    5.689      2 Template:Navigation_menu_2
- 22.45%    5.047      1 Template:Userdocnavi/fr
- 15.94%    3.583      1 Template:GuiCommand/fr
- 13.05%    2.934      2 Template:Docnav/fr
-  5.62%    1.263      1 Template:Button
-  4.74%    1.065      1 Template:MenuCommand
+100.00%   16.914      1 -total
+ 34.60%    5.852      1 Template:TechDraw_Tools_navi/fr
+ 27.60%    4.668      2 Template:Navigation_menu_2
+ 23.04%    3.897      1 Template:Userdocnavi/fr
+ 14.93%    2.525      2 Template:Docnav/fr
+ 12.69%    2.147      1 Template:GuiCommand/fr
+  6.02%    1.019      1 Template:Button
+  5.95%    1.006      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278146-0!canonical and timestamp 20260125121415 and revision id 1743874. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278146-0!canonical and timestamp 20260125121458 and revision id 1743876. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
