--- a/wiki/fr/TechDraw_ExtensionDecreaseDecimal.html
+++ b/wiki/fr/TechDraw_ExtensionDecreaseDecimal.html
@@ -1,16 +1,14 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionDecreaseDecimal/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionDecreaseDecimal&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionDecreaseDecimal.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungDezimalstellenzahlVerringern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionDecreaseDecimal.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDecreaseDecimal (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDecreaseDecimal.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Zmniejsz ilo&#347;&#263; cyfr po przecinku (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">Plus de d&eacute;cimales</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Gomme</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Annotation.html" title="TechDraw Annotation/fr">Annotation</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -112,33 +110,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121459
+Cached time: 20260125121508
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.110 seconds
-Preprocessor visited node count: 344/1000000
-Post&#8208;expand include size: 24824/2097152 bytes
-Template argument size: 9953/2097152 bytes
+CPU time usage: 0.064 seconds
+Real time usage: 0.087 seconds
+Preprocessor visited node count: 343/1000000
+Post&#8208;expand include size: 24815/2097152 bytes
+Template argument size: 9947/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1168/5000000 bytes
+Unstrip post&#8208;expand size: 1172/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.914      1 -total
- 34.60%    5.852      1 Template:TechDraw_Tools_navi/fr
- 27.60%    4.668      2 Template:Navigation_menu_2
- 23.04%    3.897      1 Template:Userdocnavi/fr
- 14.93%    2.525      2 Template:Docnav/fr
- 12.69%    2.147      1 Template:GuiCommand/fr
-  6.02%    1.019      1 Template:Button
-  5.95%    1.006      1 Template:MenuCommand
+100.00%   17.481      1 -total
+ 33.07%    5.781      1 Template:TechDraw_Tools_navi/fr
+ 29.00%    5.069      2 Template:Navigation_menu_2
+ 18.90%    3.303      1 Template:Userdocnavi/fr
+ 16.77%    2.931      2 Template:Docnav/fr
+ 13.59%    2.375      1 Template:GuiCommand/fr
+  7.28%    1.272      1 Template:Button
+  7.20%    1.258      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278146-0!canonical and timestamp 20260125121458 and revision id 1743876. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278146-0!canonical and timestamp 20260125121508 and revision id 1743878. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
